# crudplus

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: App.cpp  WSListener.cpp  WSListener.hpp
client/test/: WSTest.cpp  tests.cpp
roll-dice/: CMakeLists.txt  main.cpp
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  SwaggerComponent.hpp
src/controller/: BestMoveController.hpp  MyController.hpp  RoomsController.hpp  StaticController.hpp  StatisticsController.hpp  UserController.hpp
src/db/: UserDb.hpp
src/dto/: BestMoveDto.hpp
src/event/: common.c  consumer.cpp  producer.cpp
src/service/: BestMoveService.cpp  BestMoveService.hpp
src/utils/: Nickname.cpp  Nickname.hpp  Statistics.hpp
src/websocket/: WSListener.cpp  WSListener.hpp
src/ws/: File.cpp  Lobby.hpp  Peer.cpp  Peer.hpp  Room.hpp
test/: WSTest.cpp  WSTest.hpp  tests.cpp
ui/: README.md  angular.json  package.json
ui/server/: Makefile  t.mlb  t.mlp
ui/src/: index.html  main.ts  styles.scss
ui/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
ui/src/app/model/: Album.ts
ui/src/app/pages/album/: album-home.component.ts  albums.component.ts  details.component.ts
ui/src/app/pages/album/add-album/: add-album.component.ts
ui/src/app/pages/chess/: chess.component.html  chess.component.ts
ui/src/app/service/: album.service.ts
ui/src/assets/: reset.scss
uix/: index.html  package.json  pnpm-lock.yaml  style.css
